--- a/public/contact.html
+++ b/public/contact.html
@@ -13,5 +13,6 @@
         </label>
         <button type="submit">Envoyer</button>
     </form>
+    <a href="index">Retour au menu</a>
 </body>
 </html>
