afficher données API

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <script src="index.js" defer></script>
 </head>
 <body>
     <h1>Accueil</h1>
@@ -14,6 +13,7 @@
         <li><a href="index">Accueil</a></li>
         <li><a href="services">Services</a></li>
         <li><a href="contact">Contact</a></li>
+        <li><a href="utilisateurs">Liste des utilisateurs</a></li>
     </ul>
 </body>
 </html>
